tests/resources/SyntaxErrorTest/sources/MalformedString.stab
using java.lang;

public class C {
	String s = "
	";
}
